variables.Variables.scala.error
Erreur de compilation :
Variables:6: error: reassignment to val
  nbPas = nbPas + 1;
        ^Variables:11: error: reassignment to val
  dejaFait = dejaFait + 1;
           ^