variables.Variables.scala.code
val nbPas = 0
val dejaFait = 0

while (!estSurBiscuit){
  avance()
  nbPas = nbPas + 1;
}
prendBiscuit()
while (nbPas != dejaFait){
  recule()
  dejaFait = dejaFait + 1;
}
poseBiscuit()